--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.3.2",
+    "d3-fetch": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-simple-maps": "^3.0.0"
   }
 }
