--- a/nextjs-blog/package.json
+++ b/nextjs-blog/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.2",
     "next": "13.1.6",
+    "papaparse": "^5.3.2",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
-    "react-simple-maps": "^3.0.0"
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.7.4",
+    "tooltip": "^1.6.1"
   }
 }
